tests/hm_typing/faulty_assign_from_void.sy
start :: fn do
    f :: fn do end
    q :: f'
end

// error: $Exotic
